lfr/antlrgen/lfr/lfrXParser.py
# Generated from lfrX.g4 by ANTLR 4.10
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lfrXParser ( Parser ):

    grammarFileName = "lfrX.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'endmodule'", "'module'", "'('", "')'", 
                     "';'", "','", "'finput'", "'foutput'", "'control'", 
                     "'distribute@'", "'begin'", "'end'", "'if'", "'else'", 
                     "'endcase'", "'case'", "':'", "'default'", "'<='", 
                     "'.'", "'signal'", "'flow'", "'storage'", "'pump'", 
                     "'number'", "'assign'", "'='", "'['", "']'", "'{'", 
                     "'}'", "'#MAP'", "'\"'", "'#MATERIAL'", "'#CONSTRAIN'", 
                     "'AND'", "'OR'", "'>'", "'<'", "'>='", "'+'", "'-'", 
                     "'!'", "'~'", "'&'", "'~&'", "'|'", "'~|'", "'^'", 
                     "'~^'", "'^~'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'==='", "'!=='", "'&&'", "'||'", "'**'", "'>>'", "'<<'", 
                     "'>>>'", "'<<<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "WS", "One_line_comment", 
                      "Block_comment", "Import_line", "Real_number", "Decimal_number", 
                      "Binary_number", "Octal_number", "Hex_number" ]

    RULE_skeleton = 0
    RULE_module = 1
    RULE_moduledefinition = 2
    RULE_body = 3
    RULE_ioblock = 4
    RULE_vectorvar = 5
    RULE_explicitIOBlock = 6
    RULE_declvar = 7
    RULE_distributionBlock = 8
    RULE_distributionBody = 9
    RULE_distributeBodyStat = 10
    RULE_ifElseBlock = 11
    RULE_ifBlock = 12
    RULE_elseBlock = 13
    RULE_elseIfBlock = 14
    RULE_distributeCondition = 15
    RULE_statementBlock = 16
    RULE_caseBlock = 17
    RULE_caseBlockHeader = 18
    RULE_casestat = 19
    RULE_defaultCaseStat = 20
    RULE_distvalue = 21
    RULE_distributionassignstat = 22
    RULE_sensitivitylist = 23
    RULE_signal = 24
    RULE_statements = 25
    RULE_statement = 26
    RULE_moduleinstantiationstat = 27
    RULE_instanceioblock = 28
    RULE_orderedioblock = 29
    RULE_unorderedioblock = 30
    RULE_explicitinstanceiomapping = 31
    RULE_instancename = 32
    RULE_moduletype = 33
    RULE_tempvariablesstat = 34
    RULE_signalvarstat = 35
    RULE_fluiddeclstat = 36
    RULE_storagestat = 37
    RULE_pumpvarstat = 38
    RULE_numvarstat = 39
    RULE_assignstat = 40
    RULE_literalassignstat = 41
    RULE_bracketexpression = 42
    RULE_expression = 43
    RULE_expressionterm = 44
    RULE_logiccondition_operand = 45
    RULE_logiccondition = 46
    RULE_logic_value = 47
    RULE_vector = 48
    RULE_variables = 49
    RULE_concatenation = 50
    RULE_lhs = 51
    RULE_ioassignstat = 52
    RULE_technologydirectives = 53
    RULE_technologymappingdirective = 54
    RULE_materialmappingdirective = 55
    RULE_mappingoperator = 56
    RULE_performancedirective = 57
    RULE_constraint = 58
    RULE_unit = 59
    RULE_unary_operator = 60
    RULE_binary_operator = 61
    RULE_unary_module_path_operator = 62
    RULE_binary_module_path_operator = 63
    RULE_number = 64

    ruleNames =  [ "skeleton", "module", "moduledefinition", "body", "ioblock", 
                   "vectorvar", "explicitIOBlock", "declvar", "distributionBlock", 
                   "distributionBody", "distributeBodyStat", "ifElseBlock", 
                   "ifBlock", "elseBlock", "elseIfBlock", "distributeCondition", 
                   "statementBlock", "caseBlock", "caseBlockHeader", "casestat", 
                   "defaultCaseStat", "distvalue", "distributionassignstat", 
                   "sensitivitylist", "signal", "statements", "statement", 
                   "moduleinstantiationstat", "instanceioblock", "orderedioblock", 
                   "unorderedioblock", "explicitinstanceiomapping", "instancename", 
                   "moduletype", "tempvariablesstat", "signalvarstat", "fluiddeclstat", 
                   "storagestat", "pumpvarstat", "numvarstat", "assignstat", 
                   "literalassignstat", "bracketexpression", "expression", 
                   "expressionterm", "logiccondition_operand", "logiccondition", 
                   "logic_value", "vector", "variables", "concatenation", 
                   "lhs", "ioassignstat", "technologydirectives", "technologymappingdirective", 
                   "materialmappingdirective", "mappingoperator", "performancedirective", 
                   "constraint", "unit", "unary_operator", "binary_operator", 
                   "unary_module_path_operator", "binary_module_path_operator", 
                   "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    ID=66
    WS=67
    One_line_comment=68
    Block_comment=69
    Import_line=70
    Real_number=71
    Decimal_number=72
    Binary_number=73
    Octal_number=74
    Hex_number=75

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SkeletonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.ModuleContext)
            else:
                return self.getTypedRuleContext(lfrXParser.ModuleContext,i)


        def getRuleIndex(self):
            return lfrXParser.RULE_skeleton

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkeleton" ):
                listener.enterSkeleton(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkeleton" ):
                listener.exitSkeleton(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkeleton" ):
                return visitor.visitSkeleton(self)
            else:
                return visitor.visitChildren(self)




    def skeleton(self):

        localctx = lfrXParser.SkeletonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_skeleton)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self.module()
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==lfrXParser.T__1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moduledefinition(self):
            return self.getTypedRuleContext(lfrXParser.ModuledefinitionContext,0)


        def body(self):
            return self.getTypedRuleContext(lfrXParser.BodyContext,0)


        def getRuleIndex(self):
            return lfrXParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = lfrXParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.moduledefinition()
            self.state = 136
            self.body()
            self.state = 137
            self.match(lfrXParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuledefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lfrXParser.ID, 0)

        def ioblock(self):
            return self.getTypedRuleContext(lfrXParser.IoblockContext,0)


        def getRuleIndex(self):
            return lfrXParser.RULE_moduledefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuledefinition" ):
                listener.enterModuledefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuledefinition" ):
                listener.exitModuledefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuledefinition" ):
                return visitor.visitModuledefinition(self)
            else:
                return visitor.visitChildren(self)




    def moduledefinition(self):

        localctx = lfrXParser.ModuledefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_moduledefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(lfrXParser.T__1)
            self.state = 140
            self.match(lfrXParser.ID)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lfrXParser.T__2:
                self.state = 141
                self.match(lfrXParser.T__2)
                self.state = 142
                self.ioblock()
                self.state = 143
                self.match(lfrXParser.T__3)


            self.state = 147
            self.match(lfrXParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.StatementsContext)
            else:
                return self.getTypedRuleContext(lfrXParser.StatementsContext,i)


        def distributionBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.DistributionBlockContext)
            else:
                return self.getTypedRuleContext(lfrXParser.DistributionBlockContext,i)


        def getRuleIndex(self):
            return lfrXParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = lfrXParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 151
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [lfrXParser.T__6, lfrXParser.T__7, lfrXParser.T__8, lfrXParser.T__20, lfrXParser.T__21, lfrXParser.T__22, lfrXParser.T__23, lfrXParser.T__24, lfrXParser.T__25, lfrXParser.T__31, lfrXParser.T__33, lfrXParser.T__34, lfrXParser.ID]:
                    self.state = 149
                    self.statements()
                    pass
                elif token in [lfrXParser.T__9]:
                    self.state = 150
                    self.distributionBlock()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 153 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 7)) & ~0x3f) == 0 and ((1 << (_la - 7)) & ((1 << (lfrXParser.T__6 - 7)) | (1 << (lfrXParser.T__7 - 7)) | (1 << (lfrXParser.T__8 - 7)) | (1 << (lfrXParser.T__9 - 7)) | (1 << (lfrXParser.T__20 - 7)) | (1 << (lfrXParser.T__21 - 7)) | (1 << (lfrXParser.T__22 - 7)) | (1 << (lfrXParser.T__23 - 7)) | (1 << (lfrXParser.T__24 - 7)) | (1 << (lfrXParser.T__25 - 7)) | (1 << (lfrXParser.T__31 - 7)) | (1 << (lfrXParser.T__33 - 7)) | (1 << (lfrXParser.T__34 - 7)) | (1 << (lfrXParser.ID - 7)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vectorvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.VectorvarContext)
            else:
                return self.getTypedRuleContext(lfrXParser.VectorvarContext,i)


        def explicitIOBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.ExplicitIOBlockContext)
            else:
                return self.getTypedRuleContext(lfrXParser.ExplicitIOBlockContext,i)


        def getRuleIndex(self):
            return lfrXParser.RULE_ioblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIoblock" ):
                listener.enterIoblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIoblock" ):
                listener.exitIoblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIoblock" ):
                return visitor.visitIoblock(self)
            else:
                return visitor.visitChildren(self)




    def ioblock(self):

        localctx = lfrXParser.IoblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ioblock)
        self._la = 0 # Token type
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lfrXParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.vectorvar()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==lfrXParser.T__5:
                    self.state = 156
                    self.match(lfrXParser.T__5)
                    self.state = 157
                    self.vectorvar()
                    self.state = 162
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [lfrXParser.T__6, lfrXParser.T__7, lfrXParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.explicitIOBlock()
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==lfrXParser.T__5:
                    self.state = 164
                    self.match(lfrXParser.T__5)
                    self.state = 165
                    self.explicitIOBlock()
                    self.state = 170
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VectorvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lfrXParser.ID, 0)

        def vector(self):
            return self.getTypedRuleContext(lfrXParser.VectorContext,0)


        def getRuleIndex(self):
            return lfrXParser.RULE_vectorvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVectorvar" ):
                listener.enterVectorvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVectorvar" ):
                listener.exitVectorvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVectorvar" ):
                return visitor.visitVectorvar(self)
            else:
                return visitor.visitChildren(self)




    def vectorvar(self):

        localctx = lfrXParser.VectorvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vectorvar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(lfrXParser.ID)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lfrXParser.T__27:
                self.state = 174
                self.vector()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExplicitIOBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lfrXParser.DeclvarContext)
            else:
                return self.getTypedRuleContext(lfrXParser.DeclvarContext,i)


        def getRuleIndex(self):
            return lfrXParser.RULE_explicitIOBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExplicitIOBlock" ):
                listener.enterExplicitIOBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExplicitIOBlock" ):
                listener.exitExplicitIOBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExplicitIOBlock" ):
                return visitor.visitExplicitIOBlock(self)
            else:
                return visitor.visitChildren(self)




    def explicitIOBlock(self):

        localctx = lfrXParser.ExplicitIOBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_explicitIOBlock)
        try:
            self.state = 204
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lfrXParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.match(lfrXParser.T__6)
                self.state = 178
                self.declvar()
                self.state = 183
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 179
                        self.match(lfrXParser.T__5)
                        self.state = 180
                        self.declvar() 
                    self.state = 185
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass
            elif token in [lfrXParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.match(lfrXParser.T__7)
                self.state = 187
                self.declvar()
                self.state = 192
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 188
                        self.match(lfrXParser.T__5)
                        self.state = 189
                        self.declvar() 
                    self.state = 194
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass
            elif token in [lfrXParser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 195
                self.match(lfrXParser.T__8)
                self.state = 196
                self.declvar()
                self.state = 201
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 197
                        self.match(lfrXParser.T__5)
                        self.state = 198
                        self.declvar() 
                    self.state = 203
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lfrXParser.ID, 0)

        def vector(self):
            return self.getTypedRuleContext(lfrXParser.VectorContext,0)


        def getRuleIndex(self):
            return lfrXParser.RULE_declvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclvar" ):
                listener.enterDeclvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclvar" ):
                listener.exitDeclvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclvar" ):
                return visitor.visitDeclvar(self)
            else:
                return visitor.visitChildren(self)




    def declvar(self):

        localctx = lfrXParser.DeclvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declvar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lfrXParser.T__27:
                self.state = 206
                self.vector()


            self.state = 209
            self.match(lfrXParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DistributionBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sensitivitylist(self):
            return self.getTypedRuleContext(lfrXParser.SensitivitylistContext,0)


        def distributionBody(self):
            return self.getTypedRuleContext(lfrXParser.DistributionBodyContext,0)


        def getRuleIndex(self):
            return lfrXParser.RULE_distributionBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDistributionBlock" ):
                listener.enterDistributionBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDistributionBlock" ):
                listener.exitDistributionBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDistributionBlock" ):
                return visitor.visitDistributionBlock(self)
            else:
                return visitor.visitChildren(self)




    def distributionBlock(self):

        localctx = lfrXParser.DistributionBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_distributionBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.match(lfrXParser.T__9)
            self.state = 212
            self.match(lfrXParser.T__2)
            self.state = 213
            self.sensitivitylist()
            self.state = 214
            self.match(lfrXParser.T__3)
            self.state = 215
            self.match(lfrXParser.T__10)
            self.state = 216
            self.distributionBody()
            self.state = 217
            self.match(lfrXParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

